--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,64 +1,83 @@
 html {
-    font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
-    background-color: #00539f;
+  font-size: 14px;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #00539f;
 }
 
 h1 {
-    font-size: 60px;
-    text-align: center;
-    margin: 2px;
-  }
+  font-size: 60px;
+  text-align: center;
+  margin: 2px;
+}
 
-  body {
-    width: auto;
-    margin: 10px 10px;
-    background-color: #ff9500;
-    padding: 0 20px 20px 20px;
-    border: 5px solid black;
-  }
+body {
+  width: auto;
+  margin: 10px 10px;
+  background-color: #ff9500;
+  padding: 0 20px 20px 20px;
+  border: 5px solid black;
+}
 
-  img {
-    display: block;
-    margin: auto auto;
-    max-width:80%;
-    max-height:80%;
-  }
+img {
+  display: block;
+  margin: auto auto;
+  max-width:80%;
+  max-height:80%;
+}
 
-  menu,
-  ul {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    width: 80%;
-    text-align: center;
-    margin: auto 
-  }
-  
-  li {
-    flex-grow: 1;
-  }
-  
-  button {
-    width: 90%;
-    min-height: 30px;
-    margin-bottom: 8px;
-    font-size: x-large;
-  }
+menu,
+ul {
+  display: flex;
+  list-style: none;
+  padding-top: 20px;
+  width: 60%;
+  text-align: center;
+  margin: auto 
+}
 
-.dicebox {
-padding-top: 20px;
-text-align: center;
-margin: auto;
+li {
+  flex-grow: 1;
+}
+
+button {
+  width:60%;
+  max-width: 600px;
+  min-height: 30px;
+  margin-bottom: 8px;
+  font-size: x-large;
+}
+
+.gamewindow {
+  padding-top: 20px;
+  text-align: center;
+  margin: auto;
 }
 
 section {
   font-size: 100px;
   display: inline
- 
 }
 
 p {
-font-size: 32px;
+  font-size: 32px;
+}
+
+#tactoe {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(3, 1fr);
+  aspect-ratio: 1;
+  max-height: 800px;
+}
+
+.toebox {
+border: 4px 4px 4px 4px;
+padding: 10px;
+font-size: 100px;
+Height:300px;
+width: 300px;
+background-color: #ff9500;
+font-size: 200px;
+;
 
 }
